name:              lambdar
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.Article
                     Handler.Articles

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                FlexibleInstances
                DeriveGeneric

    build-depends: aeson                         >= 0.6        && < 0.9
                 , base                          >= 4          && < 5
                 , bytestring                    >= 0.9        && < 0.11
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , conduit                       >= 1.0        && < 2.0
                 , containers
                 , data-default
                 , directory                     >= 1.1        && < 1.3
                 , esqueleto                     >= 2.1.2.1
                 , fast-logger                   >= 2.2        && < 2.4
                 , file-embed
                 , foreign-store >= 0.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 2.1        && < 2.2
                 , monad-control                 >= 0.3        && < 1.1
                 , monad-logger                  >= 0.3        && < 0.4
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-sqlite             >= 2.1.1      && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , safe
                 , shakespeare                   >= 2.0        && < 2.1
                 , template-haskell
                 , text                          >= 0.11       && < 2.0
                 , time
                 , unordered-containers
                 , vector
                 , wai-extra                     >= 3.0        && < 3.1
                 , wai-logger                    >= 2.2        && < 2.3
                 , warp                          >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.5

executable         lambdar
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, lambdar

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable lang
    if flag(library-only)
       Buildable: False

    main-is:        lang.hs
    hs-source-dirs: app

    ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                FlexibleInstances
                DeriveGeneric
                ScopedTypeVariables

    build-depends:  aeson >= 0.8.0.2
                  , base
                  , classy-prelude
                  , classy-prelude-yesod
                  , fast-logger >= 2.2.3
                  , file-embed >= 0.0.8.2
                  , hjsmin >= 0.1.4.7
                  , lambdar
                  , lifted-base
                  , monad-logger
                  , optparse-applicative >= 0.11.0.2
                  , persistent                    >= 2.0        && < 2.2
                  , persistent-sqlite             >= 2.1.1      && < 2.2
                  , resourcet
                  , shakespeare
                  , template-haskell
                  , text >= 0.11 && < 2.0
                  , transformers
                  , wai-extra >= 3.0.4.6
                  , warp >= 3.0.10
                  , yaml >= 0.8.10.1
                  , yaml >= 0.8.10.1
                  , yesod
                  , yesod-auth >= 1.4.3.1
                  , yesod-core
                  , yesod-form >= 1.4.4.1
                  , yesod-persistent >= 1.4.0.2
                  , yesod-static >= 1.4.0.4

executable tag
    if flag(library-only)
       Buildable: False

    main-is:        tag.hs
    hs-source-dirs: app

    ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                FlexibleInstances
                DeriveGeneric
                ScopedTypeVariables

    build-depends:  aeson >= 0.8.0.2
                  , base
                  , classy-prelude
                  , classy-prelude-yesod
                  , fast-logger >= 2.2.3
                  , file-embed >= 0.0.8.2
                  , hjsmin >= 0.1.4.7
                  , lambdar
                  , lifted-base
                  , monad-logger
                  , optparse-applicative >= 0.11.0.2
                  , persistent                    >= 2.0        && < 2.2
                  , persistent-sqlite             >= 2.1.1      && < 2.2
                  , resourcet
                  , shakespeare
                  , template-haskell
                  , text >= 0.11 && < 2.0
                  , transformers
                  , wai-extra >= 3.0.4.6
                  , warp >= 3.0.10
                  , yaml >= 0.8.10.1
                  , yaml >= 0.8.10.1
                  , yesod
                  , yesod-auth >= 1.4.3.1
                  , yesod-core
                  , yesod-form >= 1.4.4.1
                  , yesod-persistent >= 1.4.0.2
                  , yesod-static >= 1.4.0.4

executable article
    if flag(library-only)
       Buildable: False

    main-is:        article.hs
    hs-source-dirs: app

    ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                FlexibleInstances
                DeriveGeneric
                ScopedTypeVariables

    build-depends:  aeson >= 0.8.0.2
                  , base
                  , classy-prelude
                  , classy-prelude-yesod
                  , fast-logger >= 2.2.3
                  , file-embed >= 0.0.8.2
                  , hjsmin >= 0.1.4.7
                  , lambdar
                  , lifted-base
                  , monad-logger
                  , optparse-applicative >= 0.11.0.2
                  , persistent                    >= 2.0        && < 2.2
                  , persistent-sqlite             >= 2.1.1      && < 2.2
                  , resourcet
                  , shakespeare
                  , template-haskell
                  , text >= 0.11 && < 2.0
                  , transformers
                  , wai-extra >= 3.0.4.6
                  , warp >= 3.0.10
                  , yaml >= 0.8.10.1
                  , yaml >= 0.8.10.1
                  , yesod
                  , yesod-auth >= 1.4.3.1
                  , yesod-core
                  , yesod-form >= 1.4.4.1
                  , yesod-persistent >= 1.4.0.2
                  , yesod-static >= 1.4.0.4
                  , pandoc >= 1.13.2
                  , cryptohash >= 0.11.6
                  , blaze-html >= 0.7.1.0
                  , blaze-markup >= 0.6.3.0
                  , time >= 1.4.2
                  , esqueleto >= 2.1.2.1
                  , split >= 0.2.2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                FlexibleInstances
                DeriveGeneric

    build-depends: base
                 , lambdar
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
